<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/experimental_white_background"
    tools:context="Admin.MainActivityAdmin">

    <Button
        android:id="@+id/btnBackD"
        android:layout_width="102dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/button_blue_alt"
        android:fontFamily="@font/m"
        android:text="@string/sctPicture"
        android:textAllCaps="false"
        android:textColor="@color/MainGrey"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/imgSelected"
        app:layout_constraintEnd_toStartOf="@+id/txtDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="224dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/generic_edit"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="Enter story title"
        android:scrollbars="vertical"
        android:textColor="@color/MainGrey"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chkEnglish"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/generic_edit"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="English"
        android:textColor="@color/MainGrey"
        app:layout_constraintBottom_toTopOf="@+id/chkAfrikaans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkAfrikaans"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/generic_edit"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="Afrikaans"
        android:textColor="@color/MainGrey"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/chkEnglish" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="252dp"
        android:layout_height="74dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/generic_edit"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="Enter picture decsription"
        android:scrollbars="vertical"
        android:textColor="@color/MainGrey"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/imgSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBackD"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_yellow_main"
        android:fontFamily="@font/m"
        android:textAllCaps="false"
        android:textColor="@color/MainGrey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/list"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:text="@string/uplo" />

    <ImageView
        android:id="@+id/imgSelected"
        android:layout_width="377dp"
        android:layout_height="325dp"
        android:background="@drawable/better_yellow"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.514" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/image_view"
        android:layout_width="371dp"
        android:layout_height="419dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/better_yellow"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/showallimg"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_blue_alt"
        android:fontFamily="@font/m"
        android:text="@string/addtList"
        android:textAllCaps="false"
        android:textColor="@color/MainGrey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10533515" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83994526" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30413625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89056087" />

</androidx.constraintlayout.widget.ConstraintLayout>